--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
           name: データベースの起動を待機
           command: dockerize -wait tcp://127.0.0.1:3306 -timeout 1m
       - run:
+          name: CircleCI用のdatabase.ymlにする
+          command: mv ./config/database.yml.ci ./config/database.yml
+      - run:
           name: データベースのセットアップ
           command: bundle exec rake db:schema:load
       - run: 
