--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,8 @@ jobs:
           RAILS_ENV: test
       - image: circleci/mysql:5.7
         environment:
-          MYSQL_USER: root
-          MYSQL_ROOT_PASSWORD: password
-          MYSQL_DATABASE: mitsugu-app_test
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_ROOT_HOST: 127.0.0.1
     working_directory: ~/mitsugu-app
     steps:
       - checkout
