--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,9 @@ jobs:
           command: mv ./config/database.yml.ci ./config/database.yml
       - run:
           name: データベースのセットアップ
-          command: bundle exec rake db:schema:load
+          command: |
+            bundle exec rake db:create
+            bundle exec rake db:schema:load
       - run: 
           name: テストの実行
           command: bundle exec rspec
